--- a/sistema_plantilla/templates/core/home.html
+++ b/sistema_plantilla/templates/core/home.html
@@ -2,13 +2,14 @@
 {% block content %}
 <div class="row">
 	<div class="col-xs-12">
-			<div class="container">
+			<div class="box box-primary">
 				<div class="box-header">
 					<h2>Plantilla</h2>
 				</div>
 			</div>
 			<div class="box-body">
-				<div class="row">
+				<div class="col-ms-12">
+					<form action="" method="POST">
 					{% for theme in listado_themes %}
 					<div class="col-xs-4">
 						<a href="#" class="thumbnail">
@@ -17,8 +18,18 @@
 					    <div class="caption">
 					    	<h3>{{theme.titulo}}</h3>
 					    </div>
+					    <div class="form-group">
+					    	<label for="">Elije theme</label>
+					    	<input type="radio" class="form-control" name="theme" value="{{theme.titulo}}">
+					    </div>
 					</div>
 					{% endfor %}
+					</form>
+					<div class="add-theme col-xs-12">
+						<form action="" class="">
+							<input type="file">
+						</form>
+					</div>
 				</div>
 			</div>
 	</div>
