--- a/sistema_plantilla/templates/core/home.html
+++ b/sistema_plantilla/templates/core/home.html
@@ -26,9 +26,7 @@
 					{% endfor %}
 					</form>
 					<div class="add-theme col-xs-12">
-						<form action="" class="">
-							<input type="file">
-						</form>
+						<a href="{% url 'theme:agregar_theme' %}" class="btn btn-info">Agregar Theme</a>
 					</div>
 				</div>
 			</div>
